--- a/index.html
+++ b/index.html
@@ -1,180 +1,112 @@
 <!DOCTYPE html>
 <html lang="hi">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>RJ पापड़ — Login → Logo → Language → Main Page</title>
-<style>
-  *{margin:0;padding:0;box-sizing:border-box}
-  html,body{height:100%;width:100%;font-family:'Noto Sans Devanagari',sans-serif;background:#fff8e1;color:#222;overflow-x:hidden}
-  .center{display:flex;flex-direction:column;align-items:center;justify-content:center;height:100vh;text-align:center;padding:12px}
-  .card{background:#fff;padding:20px;border-radius:10px;box-shadow:0 4px 10px rgba(0,0,0,0.1);max-width:420px;width:100%}
-  input{width:100%;padding:10px;margin:8px 0;border:1px solid #ccc;border-radius:6px;font-size:15px}
-  button{background:#ffc107;border:none;padding:10px 16px;border-radius:8px;font-weight:700;cursor:pointer;width:100%}
-  button:hover{opacity:0.98}
-  h1{color:#c47f00;margin-bottom:10px}
-  .banner{width:100%;margin:10px 0;border-radius:0;display:block}
-  #notify{position:fixed;bottom:-80px;left:50%;transform:translateX(-50%);background:#4CAF50;color:#fff;padding:10px 18px;border-radius:30px;font-weight:600;transition:all 0.45s ease;z-index:9999}
-  #notify.show{bottom:20px}
-  .topbar{display:flex;justify-content:space-between;align-items:center;padding:10px 16px;background:rgba(255,255,255,0.9);position:sticky;top:0;box-shadow:0 1px 6px rgba(0,0,0,0.06);z-index:20}
-  .logout-btn{background:#f44336;color:white;border:none;padding:8px 12px;border-radius:8px;cursor:pointer}
-  .logout-btn:hover{opacity:0.95}
-  .langBar{display:flex;gap:10px;margin-top:12px;flex-wrap:wrap;justify-content:center}
-  .langBtn{background:#ffc107;border:none;padding:10px 14px;border-radius:8px;cursor:pointer;font-weight:700}
-  .logoBox{display:flex;flex-direction:column;align-items:center;justify-content:center;gap:12px;height:60vh}
-  .logoBox img{width:65vw;max-width:260px;height:auto;border-radius:10px}
-  @media(max-width:520px){.logoBox img{width:80vw}}
-  footer{text-align:center;color:#666;margin:18px 0;font-size:13px}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>RJ Papad Loyalty Wallet</title>
+  <style>
+    body {
+      font-family: "Poppins", sans-serif;
+      background-color: #fff8dc;
+      text-align: center;
+      padding: 20px;
+    }
+    h1 {
+      color: #d2691e;
+    }
+    .container {
+      background: #ffffff;
+      max-width: 400px;
+      margin: 30px auto;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 0 8px rgba(0,0,0,0.2);
+    }
+    input {
+      width: 90%;
+      padding: 10px;
+      margin: 8px 0;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+    }
+    button {
+      background: #ffb300;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 6px;
+      font-size: 16px;
+    }
+  </style>
 </head>
 <body>
 
-<div id="notify">✅</div>
-
-<!-- LOGIN PAGE -->
-<div id="loginPage" class="center">
-  <div class="card">
-    <h1>लॉगिन करें</h1>
-    <input id="loginMobile" type="tel" placeholder="मोबाइल नंबर डालें">
-    <button id="loginBtn">🔓 लॉगिन</button>
-  </div>
-</div>
-
-<!-- REGISTER PAGE -->
-<div id="registerPage" class="center" style="display:none;">
-  <div class="card">
-    <h1>रजिस्टर करें</h1>
-    <input id="regName" type="text" placeholder="नाम / Name">
-    <input id="regMobile" type="tel" placeholder="मोबाइल नंबर (पहले से भरा होगा)">
-    <button id="regSaveBtn">💾 सेव करें</button>
-    <button class="secondary" id="backToLoginBtn">← वापस लॉगिन पेज</button>
-  </div>
-</div>
-
-<!-- LOGO PAGE (Language Selection) -->
-<div id="logoPage" class="center" style="display:none;">
-  <div class="logoBox">
-    <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_0000000040986208ae9fdd85a3a3cbc8.png" alt="RJ Logo">
-    <div style="text-align:center; font-weight:600; color:#333">भाषा चुनें / Choose Language</div>
-    <div class="langBar">
-      <button class="langBtn" onclick="chooseLang('hi')">हिंदी</button>
-      <button class="langBtn" onclick="chooseLang('en')">English</button>
-      <button class="langBtn" onclick="chooseLang('gu')">ગુજરાતી</button>
-    </div>
-  </div>
-</div>
-
-<!-- MAIN PAGE -->
-<div id="mainSite" style="display:none;">
-  <div class="topbar">
-    <div id="welcomeText">Welcome</div>
-    <div>
-      <button id="logoutBtn" class="logout-btn">Logout</button>
-    </div>
+  <h1>🪙 RJ Papad Loyalty Wallet</h1>
+  <div class="container">
+    <h3>रजिस्टर करें (Mobile Number से)</h3>
+    <input type="text" id="user_name" placeholder="नाम (वैकल्पिक)">
+    <input type="text" id="user_mobile" placeholder="मोबाइल नंबर (अनिवार्य)">
+    <button onclick="registerUser()">रजिस्टर करें</button>
   </div>
 
-  <div style="max-width:980px;margin:12px auto;padding:12px;">
-    <img id="topBanner" class="banner" alt="Top Banner">
-    <h1 id="titleText" style="text-align:center;color:#c47f00">RJ पापड़ में आपका स्वागत है!</h1>
+  <p id="message"></p>
 
-    <div style="background:#fff;padding:14px;border-radius:10px;box-shadow:0 6px 18px rgba(0,0,0,0.04);margin:12px 0;">
-      <p><strong>नाम:</strong> <span id="showName">—</span></p>
-      <p><strong>मोबाइल:</strong> <span id="showMobile">—</span></p>
-    </div>
+  <!-- नीचे Auto Save का Script जोड़ा गया है -->
+  <script>
+    // === RJ Papad Loyalty Wallet Auto Save ===
 
-    <img id="bottomBanner" class="banner" alt="Bottom Banner">
-  </div>
-</div>
+    // 🔗 अपना Apps Script Web App URL यहाँ डालें 👇
+    const SHEET_WEBHOOK_URL = "https://script.google.com/macros/s/PUT_YOUR_SCRIPT_URL_HERE/exec";  
+    const SHEET_SECRET = "rj_secret_2025_xyz"; // वही जो आपने Apps Script में रखा था
 
-<footer>© 2025 RJ पापड़</footer>
+    // यह function Google Sheet में डेटा भेजेगा
+    async function saveToGoogleSheet(action, user_mobile, user_name, joined_mobile, joined_name, language, points, client_id, note) {
+      const data = {
+        secret: SHEET_SECRET,
+        action,
+        user_mobile,
+        user_name,
+        joined_mobile,
+        joined_name,
+        language,
+        points,
+        client_id,
+        note
+      };
 
-<script>
-const STORAGE_KEY = "rjpapad_user_data_v1";
-const DEFAULT_TOP = "https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png";
-const DEFAULT_BOTTOM = "https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png";
+      try {
+        const response = await fetch(SHEET_WEBHOOK_URL, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(data)
+        });
 
-/* Utilities */
-function showNotify(msg){
-  const n=document.getElementById("notify");
-  n.textContent=msg; n.classList.add("show");
-  setTimeout(()=>n.classList.remove("show"),3000);
-}
-function loadUser(){
-  try{ const r=localStorage.getItem(STORAGE_KEY);
-    return r?JSON.parse(r):{name:null,mobile:null}; }catch{return {name:null,mobile:null};}
-}
-function saveUser(u){ localStorage.setItem(STORAGE_KEY,JSON.stringify(u)); }
+        const result = await response.json();
+        if (result.success) {
+          console.log("✅ डेटा सफलतापूर्वक Sheet में सेव हो गया!");
+          document.getElementById("message").innerHTML = "✅ रजिस्ट्रेशन सफल!";
+        } else {
+          console.error("❌ Error:", result.error);
+          document.getElementById("message").innerHTML = "❌ Error: " + result.error;
+        }
+      } catch (err) {
+        console.error("🚫 Fetch Error:", err);
+        document.getElementById("message").innerHTML = "⚠️ नेटवर्क त्रुटि!";
+      }
+    }
 
-/* Page references */
-const loginPage=document.getElementById("loginPage");
-const registerPage=document.getElementById("registerPage");
-const logoPage=document.getElementById("logoPage");
-const mainSite=document.getElementById("mainSite");
+    // यह function Register बटन से trigger होगा
+    function registerUser() {
+      const user_name = document.getElementById("user_name").value.trim();
+      const user_mobile = document.getElementById("user_mobile").value.trim();
 
-/* Page control */
-function showLogin(){ loginPage.style.display="flex"; registerPage.style.display="none"; logoPage.style.display="none"; mainSite.style.display="none"; }
-function showRegister(prefill){ loginPage.style.display="none"; registerPage.style.display="flex"; logoPage.style.display="none"; mainSite.style.display="none"; if(prefill)document.getElementById("regMobile").value=prefill; }
-function showLogo(){ loginPage.style.display="none"; registerPage.style.display="none"; logoPage.style.display="flex"; mainSite.style.display="none"; }
-function showMain(u){ loginPage.style.display="none"; registerPage.style.display="none"; logoPage.style.display="none"; mainSite.style.display="block";
-  document.getElementById("showName").textContent=u.name||"—";
-  document.getElementById("showMobile").textContent=u.mobile||"—";
-  document.getElementById("welcomeText").textContent=`Logged in as ${u.mobile}`; }
+      if (user_mobile === "") {
+        alert("कृपया मोबाइल नंबर दर्ज करें!");
+        return;
+      }
 
-/* On load always login page */
-window.addEventListener("DOMContentLoaded", ()=> showLogin());
-
-/* LOGIN */
-document.getElementById("loginBtn").addEventListener("click", ()=>{
-  const mobile=document.getElementById("loginMobile").value.trim();
-  if(!mobile){alert("कृपया मोबाइल नंबर डालें");return;}
-  const u=loadUser();
-  if(u&&u.mobile===mobile){
-    showNotify("✅ लॉगिन सफल! भाषा चुनें।");
-    showLogo(); // open logo page after login
-  }else{
-    showNotify("यह नंबर रजिस्टर नहीं है — कृपया रजिस्टर करें।");
-    showRegister(mobile);
-  }
-});
-
-/* REGISTER */
-document.getElementById("regSaveBtn").addEventListener("click",()=>{
-  const name=document.getElementById("regName").value.trim();
-  const mobile=document.getElementById("regMobile").value.trim();
-  if(!mobile){alert("कृपया मोबाइल नंबर डालें");return;}
-  saveUser({name,mobile});
-  showNotify("✅ रजिस्ट्रेशन सफल! भाषा चुनें।");
-  showLogo();
-});
-document.getElementById("backToLoginBtn").addEventListener("click",()=>showLogin());
-
-/* Language selection */
-function chooseLang(lang){
-  const u=loadUser();
-  if(!u||!u.mobile){showRegister();return;}
-  const texts={
-    hi:{title:"RJ पापड़ में आपका स्वागत है!",top:DEFAULT_TOP,bottom:DEFAULT_BOTTOM},
-    en:{title:"Welcome to RJ Papad!",top:DEFAULT_BOTTOM,bottom:DEFAULT_TOP},
-    gu:{title:"RJ પાપડ માં આપનું સ્વાગત છે!",top:DEFAULT_TOP,bottom:DEFAULT_BOTTOM}
-  };
-  const t=texts[lang]||texts.hi;
-  document.getElementById("topBanner").src=t.top;
-  document.getElementById("bottomBanner").src=t.bottom;
-  document.getElementById("titleText").textContent=t.title;
-  showMain(u);
-}
-
-/* Logout */
-document.getElementById("logoutBtn").addEventListener("click",()=>{
-  if(!confirm("क्या आप लॉगआउट करना चाहते हैं?"))return;
-  showNotify("🔓 लॉगआउट कर दिया गया");
-  showLogin();
-});
-
-/* Auto logout when tab closed */
-window.addEventListener("beforeunload",()=>{
-  // no permanent session, will show login next time
-});
-</script>
+      saveToGoogleSheet("register", user_mobile, user_name, "", "", "Hindi", 0, "CUST" + Math.floor(Math.random() * 10000), "New Registration");
+    }
+  </script>
 </body>
 </html>
