--- a/index.html
+++ b/index.html
@@ -1,112 +1,474 @@
 <!DOCTYPE html>
 <html lang="hi">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>RJ Papad Loyalty Wallet</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>RJ Papad - Loyalty</title>
   <style>
-    body {
-      font-family: "Poppins", sans-serif;
-      background-color: #fff8dc;
-      text-align: center;
-      padding: 20px;
+    :root{
+      --bg: #fff8dc;
+      --card: #fff;
+      --accent: #f7b500;
+      --dark: #222;
     }
-    h1 {
-      color: #d2691e;
+    body{
+      margin:0;
+      font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Noto Sans", "Poppins", sans-serif;
+      background: var(--bg);
+      color: var(--dark);
+      -webkit-font-smoothing:antialiased;
+      -moz-osx-font-smoothing:grayscale;
+      min-height:100vh;
     }
-    .container {
-      background: #ffffff;
-      max-width: 400px;
-      margin: 30px auto;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 0 8px rgba(0,0,0,0.2);
+
+    header.hero{
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      flex-direction:column;
+      background: linear-gradient(180deg, #fffaf0 0%, #fff5e0 100%);
+      padding:18px 12px;
+      position:relative;
     }
-    input {
-      width: 90%;
-      padding: 10px;
-      margin: 8px 0;
-      border: 1px solid #ccc;
-      border-radius: 6px;
+
+    .logo-img{
+      width:100%;
+      max-width:520px;
+      height:auto;
+      object-fit:contain;
+      border-radius:10px;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.08);
+      background: #fff;
+      padding:12px;
     }
-    button {
-      background: #ffb300;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 6px;
-      font-size: 16px;
+
+    .language-row{
+      margin-top:12px;
+      display:flex;
+      gap:10px;
+      align-items:center;
+      justify-content:center;
+      flex-wrap:wrap;
+    }
+    .lang-btn{
+      background:transparent;
+      border:1px solid rgba(0,0,0,0.08);
+      padding:8px 12px;
+      border-radius:8px;
+      font-weight:600;
+      cursor:pointer;
+      min-width:88px;
+    }
+    .lang-btn.active{
+      background:var(--accent);
+      color:#fff;
+      border-color:rgba(0,0,0,0.06);
+    }
+
+    main.container{
+      max-width:700px;
+      margin:18px auto;
+      padding:18px;
+      border-radius:12px;
+    }
+
+    .card{
+      background:var(--card);
+      border-radius:12px;
+      box-shadow:0 6px 18px rgba(0,0,0,0.06);
+      padding:16px;
+      margin-bottom:14px;
+    }
+
+    h1.title{
+      text-align:center;
+      color:#c47d04;
+      font-size:20px;
+      margin:6px 0 12px;
+    }
+
+    input[type="text"], input[type="tel"]{
+      width:100%;
+      padding:12px 10px;
+      margin:10px 0;
+      border-radius:8px;
+      border:1px solid #ddd;
+      box-sizing:border-box;
+      font-size:15px;
+    }
+
+    .btn{
+      display:inline-block;
+      background:var(--accent);
+      color:#111;
+      padding:12px 20px;
+      border-radius:10px;
+      font-weight:700;
+      border:none;
+      cursor:pointer;
+      width:100%;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.08);
+    }
+    .btn.secondary{
+      background:#eee;
+      color:#333;
+      margin-top:8px;
+      width:auto;
+    }
+
+    .banners{
+      display:flex;
+      gap:12px;
+      flex-direction:column;
+      margin-top:10px;
+    }
+    .banner{
+      background:#fff7e6;
+      border:1px solid rgba(0,0,0,0.03);
+      padding:12px;
+      border-radius:10px;
+      font-weight:700;
+      text-align:center;
+    }
+
+    .wallet{
+      display:flex;
+      gap:12px;
+      align-items:center;
+      justify-content:space-between;
+      padding:12px;
+      border-radius:10px;
+      background:#fff;
+      border:1px solid rgba(0,0,0,0.03);
+    }
+
+    .muted{
+      color:#666;
+      font-size:13px;
+    }
+
+    .footer-logout{
+      display:flex;
+      justify-content:center;
+      margin-top:12px;
+      gap:10px;
+    }
+
+    @media (max-width:520px){
+      .logo-img{ padding:8px; }
+      .lang-btn{ min-width:75px; padding:8px 10px; font-size:14px; }
+      .card{ padding:12px; }
     }
   </style>
 </head>
 <body>
+  <header class="hero" id="hero">
+    <!-- Replace this <img> src with your real logo file (the PNG you uploaded to GitHub or direct raw URL) -->
+    <img id="mainLogo" class="logo-img" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_0000000040986208ae9fdd85a3a3cbc8.png" alt="RJ Papad Logo">
 
-  <h1>🪙 RJ Papad Loyalty Wallet</h1>
-  <div class="container">
-    <h3>रजिस्टर करें (Mobile Number से)</h3>
-    <input type="text" id="user_name" placeholder="नाम (वैकल्पिक)">
-    <input type="text" id="user_mobile" placeholder="मोबाइल नंबर (अनिवार्य)">
-    <button onclick="registerUser()">रजिस्टर करें</button>
-  </div>
+    <div class="language-row" id="languageRow">
+      <button class="lang-btn active" data-lang="hi">हिंदी</button>
+      <button class="lang-btn" data-lang="en">English</button>
+      <button class="lang-btn" data-lang="gu">ગુજરાતી</button>
+    </div>
+  </header>
 
-  <p id="message"></p>
+  <main class="container">
+    <!-- Title that changes with language -->
+    <h1 class="title" id="pageTitle">RJ पापड़ में आपका स्वागत है!</h1>
 
-  <!-- नीचे Auto Save का Script जोड़ा गया है -->
-  <script>
-    // === RJ Papad Loyalty Wallet Auto Save ===
+    <!-- Register / Login Card -->
+    <section id="authSection" class="card">
+      <h3 id="formTitle">रजिस्टर करें (Mobile Number से)</h3>
 
-    // 🔗 अपना Apps Script Web App URL यहाँ डालें 👇
-    const SHEET_WEBHOOK_URL = "https://script.google.com/macros/s/PUT_YOUR_SCRIPT_URL_HERE/exec";  
-    const SHEET_SECRET = "rj_secret_2025_xyz"; // वही जो आपने Apps Script में रखा था
+      <input id="fieldName" type="text" placeholder="नाम (वैकल्पिक)" />
+      <input id="fieldMobile" type="tel" placeholder="मोबाइल नंबर (अनिवार्य)" inputmode="numeric" pattern="[0-9]*" />
+      <button id="btnRegister" class="btn">रजिस्टर करें</button>
 
-    // यह function Google Sheet में डेटा भेजेगा
-    async function saveToGoogleSheet(action, user_mobile, user_name, joined_mobile, joined_name, language, points, client_id, note) {
-      const data = {
-        secret: SHEET_SECRET,
-        action,
-        user_mobile,
-        user_name,
-        joined_mobile,
-        joined_name,
-        language,
-        points,
-        client_id,
-        note
-      };
+      <p id="authMessage" class="muted" style="margin-top:10px"></p>
+    </section>
 
-      try {
-        const response = await fetch(SHEET_WEBHOOK_URL, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(data)
-        });
+    <!-- Wallet / Dashboard shown after login -->
+    <section id="dashboardSection" class="card" style="display:none;">
+      <div class="wallet">
+        <div>
+          <div id="walletTitle" style="font-weight:800;">लॉयल्टी वॉलेट</div>
+          <div class="muted" id="walletMobile">Mobile: -</div>
+        </div>
+        <div style="text-align:right;">
+          <div style="font-size:20px;font-weight:800;" id="walletPoints">0</div>
+          <div class="muted" style="font-size:13px">Points</div>
+        </div>
+      </div>
 
-        const result = await response.json();
-        if (result.success) {
-          console.log("✅ डेटा सफलतापूर्वक Sheet में सेव हो गया!");
-          document.getElementById("message").innerHTML = "✅ रजिस्ट्रेशन सफल!";
-        } else {
-          console.error("❌ Error:", result.error);
-          document.getElementById("message").innerHTML = "❌ Error: " + result.error;
-        }
-      } catch (err) {
-        console.error("🚫 Fetch Error:", err);
-        document.getElementById("message").innerHTML = "⚠️ नेटवर्क त्रुटि!";
-      }
-    }
+      <div style="margin-top:10px;">
+        <button id="btnAddPoints" class="btn secondary">+ Add 10 Points (Test)</button>
+        <button id="btnViewJoins" class="btn secondary" style="margin-left:6px;">View Joined Count</button>
+      </div>
 
-    // यह function Register बटन से trigger होगा
-    function registerUser() {
-      const user_name = document.getElementById("user_name").value.trim();
-      const user_mobile = document.getElementById("user_mobile").value.trim();
+      <div class="footer-logout">
+        <button id="btnLogout" class="btn secondary">Logout</button>
+      </div>
+    </section>
 
-      if (user_mobile === "") {
-        alert("कृपया मोबाइल नंबर दर्ज करें!");
-        return;
-      }
+    <!-- Two banners that change with language -->
+    <div class="banners">
+      <div id="bannerTop" class="banner">Top Banner</div>
+      <div id="bannerBottom" class="banner">Bottom Banner</div>
+    </div>
+  </main>
 
-      saveToGoogleSheet("register", user_mobile, user_name, "", "", "Hindi", 0, "CUST" + Math.floor(Math.random() * 10000), "New Registration");
-    }
-  </script>
+<script>
+/*
+  Complete single-file solution:
+  - Switch languages (hi/en/gu) and update text + banners
+  - Register form (saves to localStorage and tries to POST to Google Script Web App)
+  - localStorage based loyalty wallet object
+  - Prevent showing register form again once registered on device (until logout)
+  IMPORTANT: Replace SHEET_WEBHOOK_URL with your Apps Script Web App URL and
+  SHEET_SECRET with the same secret token used in your Apps Script.
+*/
+
+// ====== CONFIG: put your Apps Script Web App URL + SECRET here ======
+const SHEET_WEBHOOK_URL = "https://script.google.com/macros/s/AKfycb...YOUR_ID.../exec"; // <-- replace with your real URL
+const SHEET_SECRET = "rj_secret_2025_xyz"; // <-- must match SECRET_TOKEN in Apps Script
+
+// ====== Application state ======
+const LANG_DATA = {
+  hi: {
+    title: "RJ पापड़ में आपका स्वागत है!",
+    formTitle: "रजिस्टर करें (Mobile Number से)",
+    registerBtn: "रजिस्टर करें",
+    bannerTop: "Top Banner (हिंदी)",
+    bannerBottom: "Bottom Banner (हिंदी)",
+    registeredMessage: "आप पहले ही रजिस्टर्ड हैं।",
+    addPointsLabel: "+ 10 पॉइंट जोड़ें",
+    walletTitle: "लॉयल्टी वॉलेट"
+  },
+  en: {
+    title: "Welcome to RJ Papad!",
+    formTitle: "Register (with Mobile Number)",
+    registerBtn: "Register",
+    bannerTop: "Top Banner (English)",
+    bannerBottom: "Bottom Banner (English)",
+    registeredMessage: "You are already registered.",
+    addPointsLabel: "+ Add 10 Points",
+    walletTitle: "Loyalty Wallet"
+  },
+  gu: {
+    title: "RJ પાપડ માં આપનું સ્વાગત છે!",
+    formTitle: "રજીસ્ટર કરો (Mobile Number થી)",
+    registerBtn: "રજીસ્ટર કરો",
+    bannerTop: "Top Banner (ગુજરાતી)",
+    bannerBottom: "Bottom Banner (ગુજરાતી)",
+    registeredMessage: "તમે પહેલેથી જ રજિસ્ટર્ડ છો.",
+    addPointsLabel: "+ 10 પોઈન્ટ ઉમેરો",
+    walletTitle: "લોયલ્ટી વોલેટ"
+  }
+};
+
+let currentLang = "hi";
+
+// localStorage keys
+const LS_KEY_USER = "rjpapad_user_mobile";      // single device registered mobile
+const LS_KEY_USERS = "rjpapad_users_map";       // map of mobile -> { name, points, joinedCount }
+
+// helper to get users map from localStorage
+function loadUsersMap(){
+  try{
+    const raw = localStorage.getItem(LS_KEY_USERS);
+    return raw ? JSON.parse(raw) : {};
+  }catch(e){
+    return {};
+  }
+}
+function saveUsersMap(map){
+  localStorage.setItem(LS_KEY_USERS, JSON.stringify(map));
+}
+
+// set language UI
+function applyLanguage(lang){
+  currentLang = lang;
+  const d = LANG_DATA[lang];
+  document.getElementById("pageTitle").textContent = d.title;
+  document.getElementById("formTitle").textContent = d.formTitle;
+  document.getElementById("btnRegister").textContent = d.registerBtn;
+  document.getElementById("bannerTop").textContent = d.bannerTop;
+  document.getElementById("bannerBottom").textContent = d.bannerBottom;
+  document.getElementById("walletTitle").textContent = d.walletTitle;
+  // update active button styles
+  document.querySelectorAll(".lang-btn").forEach(b => {
+    b.classList.toggle("active", b.getAttribute("data-lang") === lang);
+  });
+}
+
+// try to post to Google sheet (Apps Script)
+async function saveToGoogleSheet(action, user_mobile, user_name, joined_mobile="", joined_name="", language=currentLang, points=0, client_id="", note=""){
+  if(!SHEET_WEBHOOK_URL || SHEET_WEBHOOK_URL.includes("PUT_YOUR")){
+    console.log("No Webhook URL set — skipping remote save.");
+    // still return success for local flow
+    return { success:true, skipped:true };
+  }
+
+  const payload = {
+    secret: SHEET_SECRET,
+    action,
+    user_mobile,
+    user_name,
+    joined_mobile,
+    joined_name,
+    language,
+    points,
+    client_id,
+    note
+  };
+
+  try{
+    const resp = await fetch(SHEET_WEBHOOK_URL, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify(payload)
+    });
+    const json = await resp.json();
+    console.log("Sheet response:", json);
+    return json;
+  }catch(err){
+    console.error("Network/Fetch error:", err);
+    return { success:false, error: err.message || "Network error" };
+  }
+}
+
+// UI: show/hide sections based on whether device has registered mobile
+function showAuthOrDashboard(){
+  const registeredMobile = localStorage.getItem(LS_KEY_USER);
+  if(registeredMobile){
+    // show dashboard
+    document.getElementById("authSection").style.display = "none";
+    document.getElementById("dashboardSection").style.display = "block";
+    populateWallet(registeredMobile);
+  } else {
+    document.getElementById("authSection").style.display = "block";
+    document.getElementById("dashboardSection").style.display = "none";
+  }
+}
+
+// populate wallet info for mobile
+function populateWallet(mobile){
+  const users = loadUsersMap();
+  const profile = users[mobile] || { name:"", points:0, joined:0 };
+  document.getElementById("walletMobile").textContent = "Mobile: " + mobile + (profile.name ? " ("+profile.name+")" : "");
+  document.getElementById("walletPoints").textContent = profile.points || 0;
+}
+
+// register user flow
+async function registerUserFlow(){
+  const name = document.getElementById("fieldName").value.trim();
+  const mobile = document.getElementById("fieldMobile").value.trim();
+  const message = document.getElementById("authMessage");
+
+  if(!mobile){
+    alert(currentLang === "hi" ? "कृपया मोबाइल नंबर दर्ज करें!" : (currentLang==="en"? "Please enter mobile number!" : "કૃપયા મોબાઇલ નંબર દાખલ કરો!"));
+    return;
+  }
+
+  // check if already exists in local map
+  const users = loadUsersMap();
+  if(users[mobile]){
+    // already registered — just set as current
+    localStorage.setItem(LS_KEY_USER, mobile);
+    message.textContent = LANG_DATA[currentLang].registeredMessage;
+    showAuthOrDashboard();
+    // also attempt remote save for login
+    await saveToGoogleSheet("login", mobile, users[mobile].name || name, "", "", currentLang, users[mobile].points || 0, "", "Login");
+    return;
+  }
+
+  // create new profile locally
+  users[mobile] = {
+    name: name || "",
+    points: 0,
+    joined: 0,
+    createdAt: new Date().toISOString()
+  };
+  saveUsersMap(users);
+  localStorage.setItem(LS_KEY_USER, mobile);
+
+  // update UI
+  message.textContent = "✅ " + (currentLang === "hi" ? "रजिस्ट्रेशन सफल!" : (currentLang==="en"? "Registration successful!" : "રજીસ્ટ્રેશન સફળ!"));
+  showAuthOrDashboard();
+
+  // remote save to Google Sheet (register action)
+  await saveToGoogleSheet("register", mobile, name, "", "", currentLang, 0, "", "New Registration");
+}
+
+// add test points (simple local example)
+function addPointsLocal(amount=10){
+  const mobile = localStorage.getItem(LS_KEY_USER);
+  if(!mobile) return;
+  const users = loadUsersMap();
+  users[mobile] = users[mobile] || { name:"", points:0, joined:0 };
+  users[mobile].points = (users[mobile].points || 0) + amount;
+  saveUsersMap(users);
+  populateWallet(mobile);
+  // remote update
+  saveToGoogleSheet("add_points", mobile, users[mobile].name || "", "", "", currentLang, users[mobile].points, "", `Added ${amount} points`);
+}
+
+// logout (clears device session only)
+function doLogout(){
+  localStorage.removeItem(LS_KEY_USER);
+  // optionally keep users map, just remove session
+  showAuthOrDashboard();
+  alert(currentLang === "hi" ? "आप लॉगआउट हो गए।" : (currentLang==="en"? "You are logged out." : "તમારે લોગઆઉટ કર્યો."));
+}
+
+// view joined count (simple local alert)
+function viewJoinedCount(){
+  const mobile = localStorage.getItem(LS_KEY_USER);
+  if(!mobile) return alert("No user");
+  const users = loadUsersMap();
+  const profile = users[mobile] || { joined:0 };
+  alert("Joined count: " + (profile.joined || 0));
+}
+
+// wiring up buttons, events
+document.addEventListener("DOMContentLoaded", function(){
+  // language buttons
+  document.querySelectorAll(".lang-btn").forEach(btn=>{
+    btn.addEventListener("click", ()=> {
+      const lang = btn.getAttribute("data-lang");
+      applyLanguage(lang);
+    });
+  });
+
+  // initial language apply
+  applyLanguage(currentLang);
+
+  // register button
+  document.getElementById("btnRegister").addEventListener("click", ()=> {
+    registerUserFlow();
+  });
+
+  // add points
+  document.getElementById("btnAddPoints").addEventListener("click", ()=>{
+    addPointsLocal(10);
+  });
+
+  document.getElementById("btnViewJoins").addEventListener("click", ()=>{
+    viewJoinedCount();
+  });
+
+  document.getElementById("btnLogout").addEventListener("click", ()=>{
+    doLogout();
+  });
+
+  // if user already registered (device), show dashboard
+  showAuthOrDashboard();
+});
+
+// OPTIONAL: if you want to support "join referral" logic where one user joins using another's mobile,
+// you can implement an input field for joined_mobile, and then when registering, increment joined count for that mobile.
+// This demo keeps the flow simple and local-storage based to avoid server complexity.
+</script>
 </body>
 </html>
