--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 */
 
 // ====== CONFIG: put your Apps Script Web App URL + SECRET here ======
-const SHEET_WEBHOOK_URL = "https://script.google.com/macros/s/AKfycb...YOUR_ID.../exec"; // <-- replace with your real URL
+const SHEET_WEBHOOK_URL = "https://script.google.com/macros/s/AKfycbx1ZOkkueM5CNONWOiH0n_ryi9aucdbDm64EAl_jyuwBDY7SUMJGkJNeUfKfCDGchgV/exec/exec"; // <-- replace with your real URL
 const SHEET_SECRET = "rj_secret_2025_xyz"; // <-- must match SECRET_TOKEN in Apps Script
 
 // ====== Application state ======
